Closed Bug 1858143 Opened 1 year ago Closed 11 months ago

"has storage access" should only persist during navigations that do not change the iframe's window origin

Categories

(Core :: Privacy: Anti-Tracking, defect)

defect

Tracking

()

RESOLVED FIXED
121 Branch
Tracking Status
firefox121 --- fixed

People

(Reporter: bvandersloot, Assigned: bvandersloot)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Currently we perform a same-origin check with the triggering principal. This is wrong.

This is also compounded by a missing population of the LoadInfo on Location.href assignment.

This is the actual issue behind the INVALID Bug 1850346

Assignee: nobody → bvandersloot
Status: NEW → ASSIGNED
Attachment #9357621 - Attachment description: WIP: Bug 1858143 - "has storage access" should only persist during navigations that do not change the iframe's window origin - WIP → Bug 1858143 - "has storage access" should only persist during navigations that do not change the iframe's window origin - r=#anti-tracking!,smaug!
Blocks: 1860957
Pushed by bvandersloot@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/fd8268813d4c "has storage access" should only persist during navigations that do not change the iframe's window origin - r=anti-tracking-reviewers,smaug,pbz
Status: ASSIGNED → RESOLVED
Closed: 11 months ago
Resolution: --- → FIXED
Target Milestone: --- → 121 Branch
No longer blocks: 1860957
Duplicate of this bug: 1860957
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: